# LinkScribe

./: Readme.md  docker-compose.yml
backend/: Dockerfile  LinkScribe.ipynb  api.py  classification-of-websites.ipynb  main.py  model_loader.py  pyproject.toml  requirements.txt  url_controller.py
backend/models/m1/: model.sav
frontend/: Dockerfile  home.py  pyproject.toml
