[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Samantha Gallego, Jessica Arias, Sebastian Anderson"]
readme = "README.md"
packages = [{include = "cloud_run_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
pandas = "^1.5.1"
black = "^22.10.0"
matplotlib = "^3.6.1"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
fastapi-utils = "^0.2.1"
uvicorn = "^0.19.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
bs4 = "^0.0.1"
requests = "^2.28.2"
nltk = "^3.8.1"
spacy = "^3.5.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
