[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Samantha Gallego, Jessica Arias, Sebastian Anderson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.2"
streamlit = "^1.20.0"
watchdog = "^2.3.1"
requests = "^2.28.2"
python-decouple = "^3.8"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
bs4 = "^0.0.1"
scrapy = "^2.8.0"
nltk = "^3.8.1"
scikit-learn = "^1.1.3"
spacy = "^3.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
